force-app/main/default/objects/InvoiceMilestoneDocumentAlyante__c/InvoiceMilestoneDocumentAlyante__c.object-meta.xml
<CustomObject>
    <label>Invoice Milestone - Document Alyante</label>
    <nameField>
        <displayFormat>Doc-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Milestone - Document Alyante</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>