force-app/main/default/objects/InvoiceMilestoneDocumentAlyante__c/fields/DocumentAlyante__c.field-meta.xml
<CustomField>
    <fullName>DocumentAlyante__c</fullName>
    <label>Document Alyante</label>
    <referenceTo>DocumentAlyante__c</referenceTo>
    <relationshipLabel>Invoice Milestone - Document Alyante</relationshipLabel>
    <relationshipName>InvoiceMilestoneDocumentAlyante</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>