force-app/main/default/objects/InvoiceMilestoneDocumentAlyante__c/fields/InvoiceMilestone__c.field-meta.xml
<CustomField>
    <fullName>InvoiceMilestone__c</fullName>
    <label>Invoice Milestone</label>
    <referenceTo>InvoiceMilestone__c</referenceTo>
    <relationshipLabel>Invoice Milestone - Document Alyante</relationshipLabel>
    <relationshipName>InvoiceMilestoneDocumentAlyante</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>