force-app/main/default/objects/InvoiceMilestoneDocumentAlyante__c/fields/InvoiceMilestoneExtId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceMilestoneExtId__c</fullName>
    <formula>InvoiceMilestone__r.ExtId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Milestone ExtId</label>
    <type>Text</type>
</CustomField>